// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEPA methods Authorize 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100.3,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Authorize",
            "Name": "sepadirectdebit",
            "Parameters": [
              {
                "Name": "Customerbic",
                "Value": "TESTNL2A",
              },
              {
                "Name": "CustomerIBAN",
                "Value": "NL13TEST0123456789",
              },
              {
                "Name": "MandateReference",
                "Value": "1DCtestreference",
              },
              {
                "Name": "MandateDate",
                "Value": "2022-07-03",
              },
              {
                "Name": "Customeraccountname",
                "Value": "Test Acceptatie",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
      "StartRecurrent": true,
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`SEPA methods Emandates 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100.3,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "PayWithEmandate",
            "Name": "sepadirectdebit",
            "Parameters": [
              {
                "Name": "MandateReference",
                "Value": "1DC326734AB3084FC7",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`SEPA methods ExtraInfo 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay,ExtraInfo",
            "Name": "sepadirectdebit",
            "Parameters": [
              {
                "Name": "Customerbic",
                "Value": "TESTNL2A",
              },
              {
                "Name": "CustomerIBAN",
                "Value": "NL13TEST0123456789",
              },
              {
                "Name": "MandateDate",
                "Value": "2022-07-03",
              },
              {
                "Name": "Customeraccountname",
                "Value": "Test Acceptatie",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`SEPA methods Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100.3,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "sepadirectdebit",
            "Parameters": [
              {
                "Name": "Customerbic",
                "Value": "TESTNL2A",
              },
              {
                "Name": "CustomerIBAN",
                "Value": "NL13TEST0123456789",
              },
              {
                "Name": "MandateReference",
                "Value": "1DCtestreference",
              },
              {
                "Name": "MandateDate",
                "Value": "2022-07-03",
              },
              {
                "Name": "Customeraccountname",
                "Value": "Test Acceptatie",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
      "StartRecurrent": true,
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`SEPA methods PayRecurrent 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 10,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "OriginalTransactionKey": "636BC4E3540D4B3DA1962B5BA0F680E9",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "PayRecurrent",
            "Name": "sepadirectdebit",
            "Parameters": [],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`SEPA methods Refund 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "EUR",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "636BC4E3540D4B3DA1962B5BA0F680E9",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "sepadirectdebit",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
